@@ -98,6 +98,8 @@ Bug Fixes
 * SOLR-9977: Fix config bug in DistribDocExpirationUpdateProcessorTest that allowed false assumptions
   about when index version changes (hossman)
 
+* SOLR-9979: Macro expansion should not be done in shard requests (Tomás Fernández Löbbe)
+
 Optimizations
 ----------------------
 
